V3: harden Keystore compatibility metadata